tests/expectations/compiler/bugs/b28610.out
Error [ETYC0372127]: records cannot be instantiated in an async function context.
    --> compiler-test:11:24
     |
  11 |         let t: Token = Token { owner: addr };
     |                        ^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372127]: records cannot be instantiated in an async function context.
    --> compiler-test:12:16
     |
  12 |         assert(Token { owner: addr }.owner == addr);
     |                ^^^^^^^^^^^^^^^^^^^^^
